# yaima

./: .env.example  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  compose.yaml
migrations/: 20260606193040_normalise_user_credentials.down.sql  20260606193040_normalise_user_credentials.up.sql
src/: config.rs  errors.rs  main.rs  middleware.rs  models.rs  state.rs
src/routes/: admin.rs  auth.rs  users.rs
src/services/: auth.rs  mod.rs  oauth.rs  token.rs  user.rs
