[package]
name = "yaima"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yaima"
path = "src/main.rs"

[lib]
name = "yaima"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
hex = "0.4.3"
axum = "0.8.9"
dashmap = "6.2.1"
deadpool-redis = "0.23.0"
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = { version = "10.4.0", default-features = false, features = [
    "rust_crypto",
] }
getrandom = "0.4.2"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
redis = "1.2.3"
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "time",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
time = { version = "0.3.49", features = ["serde", "formatting"] }
uuid = { version = "1.23.3", features = ["v7", "serde"] }
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
axum-test = "20.1.0"
sqlx = { version = "0.9.0", features = [
    "postgres",
    "runtime-tokio",
    "migrate",
] }
tower = "0.5.3"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "z"
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
